Typos and editing

--- a/01_agama/ekottarika/13/EA_13_05.md
+++ b/01_agama/ekottarika/13/EA_13_05.md
@@ -11,7 +11,7 @@ next: EA_13_06.html
 ## Chapter 13: Profit
 ### 5. Sundarī
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. At the time, he was teaching Dharma to an assembly numbering in the hundreds of thousands that surrounded him front and back.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. At the time, he was teaching Dharma to an assembly numbering in the hundreds of thousands that surrounded him front and back.
 {:#p1}
 
 2\. At the time, a priest on the bank of a river went to the Bhagavān while carrying a heavy load. When he arrived, he set his load down to one side and stood silently in front of the Bhagavān. That priest then had this thought, “Today, the ascetic Gautama is teaching Dharma to an assembly numbering in the hundreds of thousands that surrounds him front and back. Now, I’m equally as clean as that ascetic Gautama, without any difference. Why is that? The ascetic Gautama eats excellent rice and a variety of delicacies. I’m eating fruits and vegetables to sustain myself.”
