--- a/01_agama/ekottarika/14/EA_14_01.md
+++ b/01_agama/ekottarika/14/EA_14_01.md
@@ -11,7 +11,7 @@ next: EA_14_02.html
 ## Chapter 14: Five Precepts
 ### 1. Killing Beings
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing[\[2\]](#n2){:#ref2} that accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals[\[3\]](#n3){:#ref3} when cultivated and cultivated often. If they were born among humans, a person’s life will be made quite short by it. What is that one thing? It’s the killing of beings.[\[4\]](#n4){:#ref4}”
