--- a/01_agama/ekottarika/14/EA_14_05.md
+++ b/01_agama/ekottarika/14/EA_14_05.md
@@ -11,7 +11,7 @@ next: EA_14_06.html
 ## Chapter 14: Five Precepts
 ### 5. Wrong Sex
 
-1\. Thus I have heard: One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals. If they were born among humans, a person will be made to live in a household where adultery is practiced, that lacks pure living. People will gossip and constantly slander them. What is that one thing? It’s wrong sex.
