--- a/01_agama/ekottarika/14/EA_14_06.md
+++ b/01_agama/ekottarika/14/EA_14_06.md
@@ -11,7 +11,7 @@ next: EA_14_07.html
 ## Chapter 14: Five Precepts
 ### 6. No Wrong Sex
 
-1\. Thus I have heard: One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of Nirvāṇa. What is that one thing? It’s not engaging in wrong sex.”[\[1\]](#n1){:#ref1}
