--- a/01_agama/ekottarika/14/EA_14_07.md
+++ b/01_agama/ekottarika/14/EA_14_07.md
@@ -11,7 +11,7 @@ next: EA_14_08.html
 ## Chapter 14: Five Precepts
 ### 7. False Speech
 
-1\. Thus I have heard: One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, the actions of hungry ghosts, and the actions of animals. If they were born among humans, a person will have foul breath, and people will dislike them. What is that one thing? It’s false speech.
