--- a/01_agama/ekottarika/14/EA_14_09.md
+++ b/01_agama/ekottarika/14/EA_14_09.md
@@ -11,7 +11,7 @@ next: EA_14_10.html
 ## Chapter 14: Five Precepts
 ### 9. Drinking Alcohol
 
-1\. Thus I have heard: One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the misdeeds of animals, hungry ghosts, and Hell.[\[1\]](#n1){:#ref1} If they were born among humans, a person will be made mentally ill, deluded, and unaware of what’s true or false. What is that one thing? It’s drinking alcohol.
