--- a/01_agama/ekottarika/14/EA_14_10.md
+++ b/01_agama/ekottarika/14/EA_14_10.md
@@ -11,7 +11,7 @@ next: ../19/EA_19_01.html
 ## Chapter 14: Five Precepts
 ### 10. Not Drinking Alcohol
 
-1\. Thus I have heard: One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “There isn’t anything in this assembly greater than this one thing[\[1\]](#n1){:#ref1} that when cultivated and cultivated often brings the merits that are among humans, merits up in Heaven, and attains the realization of Nirvāṇa. What is that one thing? It’s not drinking alcohol.”
