--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -14,7 +14,7 @@ next: SA1_21.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “In the past, I had pursuits and practices of enjoying form. When I realized[\[2\]](#n2){:#ref2} the enjoyment of form as a result, I truly saw it with wisdom. Thus, I had pursuits and practices of enjoying feeling … conception … volition … consciousness. When I realized the enjoyment of feeling … conception … volition … consciousness as a result, I truly saw it with wisdom.
+2\. It was then that the Bhagavān addressed the monks, “In the past, I had the pursuits and practices of enjoying form. When I realized[\[2\]](#n2){:#ref2} the enjoyment of form as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of enjoying feeling … conception … volition … consciousness. When I realized the enjoyment of feeling … conception … volition … consciousness as a result, I truly saw it with wisdom.
 {:#p2}
 
 3\. “Monks, I had the pursuits and practices of form’s trouble. When I realized form’s trouble as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of feeling’s … conception’s … volition’s … consciousness’s trouble. When I realized consciousness’s trouble as a result, I truly saw it with wisdom.
@@ -23,10 +23,10 @@ next: SA1_21.html
 4\. “Monks, I had the pursuits and practices of escaping form. When I realized the escape from form as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of escaping feeling … conception … volition … consciousness. When I realized the escape from consciousness as a result, I truly saw it with wisdom.
 {:#p4}
 
-5\. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed from, parted with, and escaped from [bondage]. I would have forever stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.
+5\. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I would have forever stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I wouldn’t have been freed from, parted with, and escaped from [these aggregates]. I couldn’t have realized my attainment of the unsurpassed and complete awakening.
 {:#p5}
 
-6\. “Monks, I did truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, and I was freed from, parted with, and escaped from [bondage]. I never again stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”
+6\. “Monks, I did truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, and I never again stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I was freed from, parted with, and escaped from [these aggregates]. I could realize my attainment of the unsurpassed and complete awakening.”
 {:#p6}
 
 7\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -49,7 +49,7 @@ next: SA1_21.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 3 August 2023
 {: .revised}
 
 ---
