--- a/01_agama/samyukta/01/SA1_21.md
+++ b/01_agama/samyukta/01/SA1_21.md
@@ -14,7 +14,7 @@ next: SA1_22.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. At the time, a certain monk went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to stand to one side. He said, “It’d be excellent, Bhagavān, if you would briefly explain the teaching for me now. After hearing the teaching, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘Because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home to train on the path of the ultimate and unsurpassed religious life, he realizes in the present: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+2\. At the time, a certain monk went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to stand to one side. He said, “It’d be excellent, Bhagavān, if you would briefly explain the teaching for me now. After hearing the teaching, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘It’s because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home to train in the ultimate and unsurpassed religious life that he realizes in the present life: “My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”
 {:#p2}
 
 3\. The Bhagavān told that monk, “Good, monk! Good! You’ve expressed yourself gladly, saying, ‘Would you briefly explain the teaching for me now? After I’ve heard the teaching, I’ll go alone to a quiet place and cultivate it earnestly … “I myself know that I won’t be subject to a later existence.”’ Is this what you’ve asked?”
@@ -22,18 +22,18 @@ next: SA1_22.html
 
 The monk said to the Buddha, “So it is, Bhagavān.”
 
-4\. The Buddha told the monk, “Listen closely! Listen closely, and consider it well, for I will explain this for you. Monk, if someone follows the tendencies, then they will follow death.[\[2\]](#n2){:#ref2} If someone follows death, then they’re bound by grasping. Monk, if someone doesn’t follow the tendencies, then they won’t follow death. Not following death, they are freed from grasping.”
+4\. The Buddha told the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, if someone follows the tendencies, then they’re following death.[\[2\]](#n2){:#ref2} If someone follows death, then they’re bound by grasping. Monk, if someone doesn’t follow the tendencies, then they aren’t following death. Not following death, they are freed from grasping.”
 {:#p4}
 
 The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”
 
-5\. The Buddha asked the monk, “How do you understand in detail the meaning of my brief explanation of the teaching?”
+5\. The Buddha asked the monk, “How exactly do you understand the meaning of my brief explanation of the teaching?”
 {:#p5}
 
 6\. The monk said to the Buddha, “Bhagavān, form follows the tendencies, and form follows death. Someone who follows the tendencies and follows death is bound by grasping. Thus, feeling … conception … volition … consciousness follows the tendencies, and consciousness follows death. Someone who follows the tendencies and follows death is bound by grasping.
 {:#p6}
 
-7\. “Bhagavān, when form doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping. Thus, if feeling … conception … volition … consciousness doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.”
+7\. “Bhagavān, when form doesn’t follow the tendencies, it doesn’t follow death.^Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.^Thus, if feeling … conception … volition … consciousness doesn’t follow the tendencies, it doesn’t follow death.^Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.^Thus do I understand the Bhagavān’s brief explanation of the teaching.”
 {:#p7}
 
 8\. The Buddha told the monk, “Good, good! That’s a detailed understanding of the meaning of my brief explanation. Why is that? When form follows the tendencies, it follows death. Someone who follows the tendencies and follows death is bound by grasping. Thus, when feeling … conception … volition … consciousness follows the tendencies, it follows death. Someone who follows the tendencies and follows death is bound by grasping.
