--- a/01_agama/ekottarika/14/EA_14_03.md
+++ b/01_agama/ekottarika/14/EA_14_03.md
@@ -11,7 +11,7 @@ next: EA_14_04.html
 ## Chapter 14: Five Precepts
 ### 3. Stealing
 
-1\. Thus I have heard: One time, the Buddha was was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, actions of hungry ghosts, and actions of animal births. If they were born among humans, a person will be made impoverished by it. They won’t have clothes to cover themselves or enough food to eat. What is that one thing? It’s stealing.”
