--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -1,94 +1,99 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 2. The Pārijāta Tree'
+title: 'The Medium Discourses | The Sevens | 2. The Pārijāta Tree'
 type: kramdown
 base: ../../../
 previous: MA_001.html
 next: MA_003.html
 ---
+
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## The Sevens
 ### 2. The Pārijāta Tree
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
-{: #p1}
+{:#p1}
 
 #### The Seasons of the Pārijāta Tree
 
-2\. It was then that the Bhagavān addressed the monks, “When the leaves of the Trāyastriṃśa Heaven’s pārijāta tree[\[2\]](#n2){:#ref2} wither and yellow, the Trāyastriṃśa gods[\[3\]](#n3){:#ref3} are delighted and rejoice, for it won’t be long before the pārijāta tree’s leaves will fall.
-{: #p2}
+2\. It was then that the Bhagavān addressed the monks, “When the leaves of the Trāyastriṃśa Heaven’s[\[2\]](#n2){:#ref2} <em>pārijāta</em> tree[\[3\]](#n3){:#ref3} turn yellow, the Trāyastriṃśa gods are delighted and rejoice: ‘It won’t be long before the <em>pārijāta</em> tree’s leaves begin to fall!’
+{:#p2}
 
-3\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have fallen, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree’s leaves will grow back.
-{: #p3}
+3\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree have fallen, the Trāyastriṃśa gods are delighted and rejoice: ‘It won’t be long before the <em>pārijāta</em> tree’s leaves grow back!’
+{:#p3}
 
-4\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s pārijāta tree have grown back, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree will grow a web [of buds].[\[4\]](#n4){:#ref4}
-{: #p4}
+4\. “Furthermore, once the leaves of the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree have grown back, the Trāyastriṃśa gods are delighted and rejoice: ‘It won’t be long before the <em>pārijāta</em> tree grows a web of buds!’[\[4\]](#n4){:#ref4}
+{:#p4}
 
-5\. “Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown a web, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree’s [buds] will grow like bird beaks.[\[5\]](#n5){:#ref5}
-{: #p5}
+5\. “Furthermore, once the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree has grown a web of buds, the Trāyastriṃśa gods are delighted and rejoice: ‘It won’t be long before the <em>pārijāta</em> tree’s buds will grow like bird beaks!’[\[5\]](#n5){:#ref5}
+{:#p5}
 
-6\. [422b] “Furthermore, once the Trāyastriṃśa Heaven’s pārijāta tree has grown [buds] like bird beaks, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree’s [buds] will open like bowls.
-{: #p6}
+6\. “Furthermore, once the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree has grown buds like bird beaks, the Trāyastriṃśa gods are delighted and rejoice, ‘It won’t be long before the <em>pārijāta</em> tree’s buds open like bowls!’
+{:#p6}
 
-7\. “Furthermore, once the [buds] of the Trāyastriṃśa Heaven’s pārijāta tree have opened like bowls, the Trāyastriṃśa gods are delighted and rejoice, for it won’t be long before the pārijāta tree will be in full bloom.
-{: #p7}
+7\. “Furthermore, once the buds of the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree have opened like bowls, the Trāyastriṃśa gods are delighted and rejoice: ‘It won’t be long before the <em>pārijāta</em> tree will be in full bloom!’
+{:#p7}
 
-8\. “When the pārijāta tree is in full bloom, the light that it shines, the color that it reflects, and the fragrance that it produces have a range of a hundred leagues.[\[6\]](#n6){:#ref6} During the fourth month of summer,[\[7\]](#n7){: #ref7} the Trāyastriṃśa gods entertain themselves with the five heavenly pleasures and the virtues with which they’re endowed. This is called the festival under the Trāyastriṃśa Heaven’s pārijāta tree.
-{: #p8}
+8\. “Once the <em>pārijāta</em> tree is in full bloom, the light that it shines, the colors that it reflects, and the fragrance that it produces have a range of a hundred <em>yojana</em>s.[\[6\]](#n6){:#ref6} During the four months of summer, the Trāyastriṃśa gods entertain themselves with the five heavenly pleasures and the virtues with which they’re endowed. This is called the gathering under the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree.
+{:#p8}
 
 #### The Seasons of the Noble Disciple
 
-9\. “Such is the meaning of the noble disciple, too. When he considers leaving home, the disciple is called ‘leaves yellowing.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree when its leaves wither and yellow.
-{: #p9}
+9\. “The meaning of the noble disciple is like this, too. When they consider leaving home, the disciple is called ‘leaves turning yellow.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree when its leaves turn yellow.
+{:#p9}
 
-10\. “Furthermore, when he shaves off their hair, puts on the reddish-brown robes, attains faith, leaves home, goes homeless, and trains on the path, the noble disciple is called ‘dropping leaves.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree dropping its leaves.
-{: #p10}
+10\. “Furthermore, when they cut off their hair, put on the reddish-brown robes, attain faith, leave home, go into homelessness, and train on the path, then the noble disciple is called ‘falling leaves.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree dropping its leaves.
+{:#p10}
 
-11\. “Furthermore, the noble disciple parts with desire and bad and unskillful things.[\[8\]](#n8){:#ref8} With perception and examination,[\[9\]](#n9){:#ref9} this seclusion produces joy and happiness, and he accomplishes and dwells in the first dhyāna.[\[10\]](#n10){:#ref10} The noble disciple then is called ‘growing back leaves.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing back its leaves.
-{: #p11}
+11\. “Furthermore, the noble disciple parts with desire and bad and unskillful things.[\[7\]](#n7){:#ref7} With perception and examination,[\[8\]](#n8){:#ref8} this seclusion produces joy and happiness, and they attain the accomplishment of the first <em>dhyāna</em>.[\[9\]](#n9){:#ref9} The noble disciple then is called ‘growing back leaves.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree growing back its leaves.
+{:#p11}
 
-12\. “Furthermore, once perception and examination have stopped, the noble disciple has an inner stillness and unified mind. Without perception or examination, this samādhi produces joy and happiness, and he accomplishes and dwells in the second dhyāna. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
-{: #p12}
+12\. “Furthermore, once perception and examination have stopped, the noble disciple has an inner stillness and unified mind. Without perception or examination, this <em>samādhi</em> produces joy and happiness, and they attain the accomplishment of the second <em>dhyāna</em>.[\[10\]](#n10){:#ref10} The noble disciple then is called ‘growing a web of buds.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree growing a web of buds.
+{:#p12}
 
-13\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as noble equanimity, mindfulness, happy abiding, and emptiness,[\[11\]](#n11){:#ref11} and he accomplishes and dwells in the third dhyāna. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
-{: #p13}
+13\. “Furthermore, the noble disciple parts with desire for joy, and they abide with equanimity and pursue nothing. With right mindfulness and right knowledge, they personally experience the happiness that’s described by noble people as equanimity, mindfulness, happy abiding, and emptiness.[\[11\]](#n11){:#ref11} They attain the accomplishment of the third <em>dhyāna</em>. The noble disciple then is called ‘growing buds like bird beaks.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree growing buds like bird beaks.
+{:#p13}
 
-14\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he’s neither discomforted nor delighted. Equanimous, mindful, and pure, he accomplishes and dwells in the fourth dhyāna. The noble disciple then is called ‘growing like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds growing] like bowls.
-{: #p14}
+14\. “Furthermore, the noble disciple ceases to feel pleasure ceases and ceases to feel pain. The basis of joy and sorrow having ceased, they’re neither discomforted nor delighted. Equanimous, mindful, and pure, they attain the accomplishment of the fourth <em>dhyāna</em>. The noble disciple then is called ‘opening like a bowl.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree when its buds open like bowls.
+{:#p14}
 
-15\. “Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he accomplishes and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ The noble disciple then is called ‘in full bloom.’ They’re like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
-{: #p15}
+15\. “Furthermore, once the noble disciple’s contaminants have ended, their mind is liberated, and their wisdom is liberated. In the present life, they know and recognize for themselves the accomplishment of this realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ The noble disciple then is called ‘in full bloom.’ They’re like the Trāyastriṃśa Heaven’s pārijāta tree when it’s in full bloom.
+{:#p15}
 
 #### Conclusion
 
-16\. “He becomes an arhat monk whose contaminants are ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town [422c] shaved off his hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present life, he accomplishes and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I truly know that I’m no longer subject to existence.’
-{: #p16}
+16\. “He becomes an <em>arhat</em>[\[12\]](#n12){:#ref12} monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sighing admiringly and praising them, ‘Some worthy disciple at some town cut off their hair, put on the reddish-brown robes, became faithful, left home, went into homelessness, and trained on the path. Once their contaminants had ended, their mind was liberated, and their wisdom was liberated. In the present life, they know and recognize for themselves the accomplishment of this realization: “Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I won’t be subject to another existence.”’
+{:#p16}
 
-17\. “This is called the assembly that coincides with the end of an arhat’s contaminants, which is like the festival held under the Trāyastriṃśa Heaven’s pārijāta tree.”
-{: #p17}
+17\. “This is called the assembly that coincides with the end of an <em>arhat</em>’s contaminants, which is like the gathering held under the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree.”
+{:#p17}
 
-18\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
-{: #p18}
+18\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
+{:#p18}
+
+---
 
 ### Notes
 
-1. {:#n1} Parallels include [AN 7.69](https://suttacentral.net/an7.69){: target="_blank"}, [EA 39.2](https://suttacentral.net/ea39.2){: target="_blank"}, and [T28](https://suttacentral.net/T28){: target="_blank"}. [\[back\]](#ref1)
-2. {:#n2}*pārijāta*. The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It’s a present-day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#ref2)
-3. {:#n3} *Trāyastriṃśa Heaven*. The Chinese translates trāyastriṃśa literally as Heaven of the Thirty-Three. This was the heaven of the Vedic gods ruled by Indra. [\[back\]](#ref3)
-4. {:#n4} The Pali parallel reads *Na cirass’eva dāni jālakajāto bhavissati*. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” The Chinese term can also be understood as “web,” describing the overall appearance of a budding tree. [\[back\]](#ref4)
-5. {:#n5} Pali: *Na cirass’eva dani kharakajato bhavissati*. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means “bird's beak;” presumably, it refers to the shape of the buds as they develop. [\[back\]](#ref5)
-6. {:#n6} *hundred leagues*. The Chinese transliterates yojana, an Indic measure of distance roughly equivalent to a league. Traditional accounts of a yojana’s length range from 7 to 9 miles. [\[back\]](#ref6)
-7. {:#n7} *fourth month of summer*. This would be the month of Skt. Āṣāḍha on the Indian lunar calendar, which coincides with late June/early July on the Gregorian calendar. The rainy season retreat began during this month among Buddhists and other wandering ascetics, and Āṣāḍha was a time of seasonal festivals and religious observances across ancient India.[\[back\]](#ref7)
-8. {:#n8} *bad and unwholesome things*. Elsewhere in MĀ, this expression is glossed as the three poisons, five hindrances, and other emotional and behavioral things that reinforce rather than overcome the root of ignorance. Cf. T26.577b26, 599a07, 805c26. [\[back\]](#ref8)
-9. {:#n9} *perception and examination*. Middle-period Chinese Buddhist translations like MĀ translated *vitarka* as 覺 and *vicāra* as 觀. Both have a perceptual meaning. The meaning of 覺 that fits best is that of an initial perception, such as when someone notices something but hasn’t given it their full attention yet. 觀 in turn means to investigate or examine something closely. This dovetails readings of *vitarka* and *vicāra* as initial and sustained thought. The difference is that these translations suggest the practitioner is visualizing rather than contemplating an object of *samādhi*. [\[back\]](#ref9)
-10. {:#n10} *dhyāna*. Despite my general policy of translate Indic and Chinese terms that aren't proper nouns and names, I’ve decided to adopt dhyāna as a loanword for a lack of English equivalents. Dhyāna were a particular type of meditative state in which the mind is gradually calmed into a stillness of activity without any focus point or subject of contemplation. Other translators have rendered it as “trance” and “absorption.” [\[back\]](#ref10)
-11. {:#n11} *emptiness*. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings for this item elsewhere in MĀ (“emptiness,” “dwelling,” and “concentration”) that are visually similar in Chinese. The Taisho editors corrected some of these passages to read “dwelling” but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is the reading that I’ve followed. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#ref7)
+1. {:#n1} Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.69" target="_blank">AN 7.69</a>, EĀ 39.2, and T28. [\[back\]](#ref1)
+2. {:#n2} <em>Trāyastriṃśa Heaven</em>. C.三十三天, G. <em>trayatriśa</em>, P. <em>tāvatiṃsa</em>, S. <em>trāyastriṃśa</em>. The C. translates S. <em>trāyastriṃśa</em> lit. as “Heaven of the Thirty-Three.” This was a Buddhist heaven where thirty-two Vedic gods and Indra reside at the top of Mount Sumeru. [\[back\]](#ref2)
+3. {:#n3} <em>pārijāta</em>. C. 晝度 (EMC <em>tɪəu-do</em>), G. ?, P. <em>pāricchattaka</em>, S. <em>pārijātaka</em>. Previously, I believed that the C. was perhaps a partial transliteration (<em>-jāta</em>), based on the Mandarin pronunciation of 晝度 (M. <em>zhòudù</em>), but the EMC pronunciation (EMC <em>tɪəu-do</em>) doesn’t support this idea. It seems instead to be an interpretive translation that means lit. “day liberation,” which we find in EĀ, too. In any case, I’ve decided to replace the C. with the S. name.<br/>
+This is also the present-day name for <a href="https://en.wikipedia.org/wiki/Nyctanthes_arbor-tristis" target="_blank"><em>Nyctanthes arbor-tristis</em></a>, which is commonly called the night-flowering jasmine tree in English. Perhaps more relevant to this <em>sūtra</em>, however, is the sacred Parijat tree located in the modern village of Kintoor of Uttar Pradesh in India. This Parijat tree is actually a Baobab tree estimated to be 800 years old and from a species native to Africa. Local Hindu legends claim that it descends from a tree brought from the heavens by Arjun, or that it was a gift made by Lord Krishna. It’s existence suggests that there was a sacred tree tradition that dates back at least to classical times. This <em>sūtra</em> may be a Buddhist adaptation of this Vedic tradition. While Buddhists created their own sacred tree connected to the Buddha’s awakening, they apparently felt the need to incorporate this sacred tree as well. [\[back\]](#ref3)
+4. {:#n4} <em>grows a web of buds</em>. C. 生網. The Pali parallel reads: <em>Na cirass’eva dāni jālakajāto bhavissati</em>. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” C. 網 can also mean “web.” I take it to describe the overall appearance of a budding tree, so I’ve added “buds” to my translation. [\[back\]](#ref4)
+5. {:#n5} <em>grow into bird beaks</em>. C. 生如鳥喙. Pali: <em>Na cirass’eva dani kharakajato bhavissati</em>. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The C. 鳥喙 lit. means “bird beak;” presumably, it refers to the shape of the buds as they grow larger and prepare to open. [\[back\]](#ref5)
+6. {:#n6} <em>hundred </em>yojana<em>s</em>. C. 百由延 (EMC “hundred” + <em>yiəu-yiɛn</em> = G. <em>śada yoyan[a]</em>). S. <em>yojana</em> was an ancient Indic measure of distance. Traditional accounts of a <em>yojana</em>’s length range from 7 to 9 miles. [\[back\]](#ref6)
+7. {:#n7} <em>bad and unskillful things</em>. Elsewhere in MĀ, this expression is glossed as the five hindrances plus several other emotional and behavioral dysfunctions. For example, at T26.577b26, they are defined as “longing (C. 增伺, S. <em>abhidhyā</em>), angry thoughts, enveloping sleepiness, agitation, pride, doubt, physical violence, defiled thoughts, disbelief, laziness, forgetfulness, and lack of <em>samādhi</em>, and frequently acting stupidly (C. 惡慧, S. <em>duṣprajña</em>).” (增伺、瞋恚心、睡眠纏、調貢高、疑惑、身諍、穢污心、不信、懈怠、無念、無定、多行惡慧). A very similar list is found in Pali sources (e.g., <a href="https://suttacentral.net/an10.53/en/sujato" target="_blank">AN 10.53</a>). [\[back\]](#ref7)
+8. {:#n8} <em>perception and examination</em>. C. 有覺、有觀. MĀ translates S. <em>vitarka</em> and <em>vicāra</em> as 覺 and 觀. In Indic language, these two words were literally “thought” and “investigation.” In C., the translations literally mean “to notice” and “to examine.” It should be noted that these are very general psychological terms in classical Chinese that are not limited to verbal or conceptual thought.<br/>In Sarvāstivāda sources, these two terms taken together refer to the process of noticing and considering objects of awareness (S. <em>vijñāna</em>) as the mind moves from one thing to the next. I.e., it describes the process of distraction. In the first <em>dhyāna</em>, distractions disrupt <em>samādhi</em>, which forces the practitioner to end them to reach the next <em>dhyāna</em>. A meditation manual written by Kumārajīva likens this to wind blowing on a burning lamp. The wick remains lit, but the flame gutters in the breeze (cf. T616.15.290a5). Thus, the first <em>dhyāna</em> is an unstable form of <em>samādhi</em>. [\[back\]](#ref8)
+9. {:#n9} <em>dhyāna</em>. C. 禪 (EMC <em>ʒɪɛn</em> = G. <em>j̄ana</em>), P. <em>jhāna</em>, S. <em>dhyāna</em>. <em>Dhyāna</em> was an early form of Buddhist meditation in which the mind is calmed into a stillness of activity through four graduated steps. Other translators have rendered it as “trance,” “meditation,” and “absorption.” In Sanskrit, outside of the Buddhist context, the word meant “thought, reflection, meditation,” from the root <em>dhyā</em>. [\[back\]](#ref9)
+10. {:#n10} <em>samādhi</em>. C. 定, G. <em>samasi</em>, P. <em>samādhi</em>, S. <em>samādhi</em>. C. 定 meant “fixed, established, settled, stabilized,” but it’s often translated to English as “concentration” when it translates S. <em>samādhi</em>. In Buddhist language, which was not very different from Sanskrit literature in this case, <em>samādhi</em> meant the fixing on the mind on one subject without distraction, which was considered a purification of mind. It was also described as the merging of the subject and object in the mind. Given this special usage, I’ve chosen not to translate the term to English. [\[back\]](#ref10)
+11. {:#n11} <em>emptiness</em>. The addition of a fourth item to this traditional formula is unique to MĀ. The older editions before the Taisho have varying readings for this item elsewhere in MĀ (“emptiness,” “dwelling,” and “samādhi”) that are visually similar in Chinese (空, 室, and 定), which suggests that it’s origin was a copyist error. The Taisho editors corrected some of these passages to read “dwelling” (室) but not all of them. The CBETA edition corrected all the passages to read “emptiness,” which is the reading that I’ve followed. The reader should be aware that this last item doesn’t occur in other sources and may well be a spurious addition. [\[back\]](#ref11)
+12. {:#n12} <em>arhat</em>. C. 阿羅訶 (EMC <em>•a-la-ha</em> = G. <em>araha</em>), P. <em>arahant</em>, S. <em>arhat</em>. The title <em>arhat</em> originally meant “worthy, venerable, deserving [of alms],” and was sometimes interpreted as “unattached one” in C. translations. It was a title used by Indian ascetics (Buddhists and Jains) to mean a person fully liberated in this life, and it was one of the most common titles given to the Buddha (along with Bhagavān, Tathāgata, and Sugata). Here, it was used to refer to a fully liberated disciple who was destined for <em>parinirvāṇa</em>. I’ve left the term untranslated as a title of special religious significance. [\[back\]](#ref12)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 June 2022
+Last Revised: 27 August 2023
 {: .revised}
 
 ---
